Fixed page overflow

--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 html, body {
     height: 100%;
     font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container-fluid {
+    min-height: 100%;
 }
 
 #lcolumn {
     background-color: #06283d;
     color: #F7F7FF;
+    min-height: 100vh;
 }
 
 #rcolumn {
     background-color: #DAD2D8;
     color: #06283d;
-    overflow-y: auto;
+    min-height: 100vh;
 }
 
 #personal-title {
@@ -106,7 +113,10 @@ html, body {
 
 @media (max-width: 991.98px) {
     #lcolumn, #rcolumn {
+        min-height: auto;
+    }
+    
+    .container-fluid {
         height: auto;
-        overflow-y: auto;
     }
 }
